Update landing page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,25 @@
 ---
-import Welcome from '../components/Welcome.astro';
+import AboutMe from '../components/AboutMe.astro';
+import ActionFronts from '../components/ActionFronts.astro';
+import ContactsAroundTheWorld from '../components/ContactsAroundTheWorld.astro';
+import ForWhomWeCreateValue from '../components/forWhomWeCreateValue.astro';
+import GlobalPartners from '../components/GlobalPartners.astro';
+import HeroBanner from '../components/HeroBanner.astro';
+import OurPurpose from '../components/OurPurpose.astro';
+import Volunteering from '../components/Volunteering.astro';
 import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import SuccesStories from '../components/SuccesStories.astro';
+import Contact from '../components/Contact.astro';
 ---
-
 <Layout>
-	<Welcome />
+	<HeroBanner />
+	<AboutMe />
+	<OurPurpose />
+	<ActionFronts />
+	<ForWhomWeCreateValue />
+	<ContactsAroundTheWorld />
+	<GlobalPartners />
+	<Volunteering />
+	<SuccesStories />
+	<Contact/>
 </Layout>
