--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,9 @@
 ---
+import '../styles/global.css'
 import AboutMe from '../components/AboutMe.astro';
 import ActionFronts from '../components/ActionFronts.astro';
 import ContactsAroundTheWorld from '../components/ContactsAroundTheWorld.astro';
-import ForWhomWeCreateValue from '../components/forWhomWeCreateValue.astro';
+import WeCreateValue from '../components/WeCreateValue.astro';
 import GlobalPartners from '../components/GlobalPartners.astro';
 import HeroBanner from '../components/HeroBanner.astro';
 import OurPurpose from '../components/OurPurpose.astro';
@@ -16,7 +17,7 @@ import Contact from '../components/Contact.astro';
 	<AboutMe />
 	<OurPurpose />
 	<ActionFronts />
-	<ForWhomWeCreateValue />
+	<WeCreateValue />
 	<ContactsAroundTheWorld />
 	<GlobalPartners />
 	<Volunteering />
