--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,7 +1,7 @@
 ---
 import { Icon } from "astro-icon/components"
 ---
-<section class="flex flex-col md:flex-row bg-[#6A7CD8] h-screen" id="contacto">
+<section class="flex flex-col md:flex-row bg-[#6A7CD8] min-h-screen" id="contacto">
     <div class="md:w-[50%] px-10 py-20">
        <h6 class="text-white font-bold text-[64px] ">Contacto</h6>
         <p class="text-white">Busco colaborar en espacios de co-creación donde las ideas fluyan y se transformen en algo significativo: medios, foros, podcasts, blogs, entrevistas o charlas entre profesionales.</p>
@@ -19,7 +19,7 @@ import { Icon } from "astro-icon/components"
       />
             Aida Oropeza López</a>
     </div>
-    <div class="flex-1 md:w-[50%] px-15 pt-10  flex ">
-<iframe aria-label='Contacto' frameborder="0" style="height:100%;width:99%;border:none;" src='https://forms.zohopublic.com/beyondtechnologyltd/form/AidaOropeza/formperma/dyEXg_LuECA4CxTqNQ6gsPUdivR9xKuJ10NtnXS39n0'></iframe>
+    <div class="flex-1 md:w-[50%] px-15 pt-10 flex items-stretch">
+<iframe aria-label='Contacto' frameborder="0" style="height:800px;width:99%;border:none;" src='https://forms.zohopublic.com/beyondtechnologyltd/form/AidaOropeza/formperma/dyEXg_LuECA4CxTqNQ6gsPUdivR9xKuJ10NtnXS39n0'></iframe>
     </div>
     </section>
