fix error uploading img

--- a/src/components/HeroBanner.astro
+++ b/src/components/HeroBanner.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from 'astro:assets';
-import aidaOropeza from "/src/assets/Aida_Oropeza.webp";
+import aidaOropeza from "../assets/Aida_oropeza.webp";
 ---
 
 <section class="flex flex-col mt-20 items-stretch justify-center md:flex-row md:mt-40">
