fix: update styles mobile header, fix: delete big white spaces

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -4,7 +4,7 @@ import aidaSobreMi from "../assets/Aida Oropeza sobre mi.webp";
 ---
 
 <section class="flex flex-col md:flex-row bg-[#F7F7F7]" id="proposito">
-    <div class="md:w-[65%] px-10 py-20">
+    <div class="md:w-[65%] px-10 py-5 md:py-20">
         <p class="text-purple">Mi propósito</p>
         <h2 class="text-[32px] text-blue font-bold">Te cuento un poco sobre mi</h1>
         <p class="pl-3 border-l-1 text-blue font-bold text-[16px] mt-20 tracking-wider">EXPERIENCIA ACTUAL</p>
@@ -19,7 +19,7 @@ import aidaSobreMi from "../assets/Aida Oropeza sobre mi.webp";
             </p>
   
     </div>
-    <div class="flex-1 md:w-[35%] px-15 pt-10 justify-center flex items-center ">
+    <div class="flex-1 md:w-[35%] px-15 py-5 md:pt-10 justify-center flex items-center ">
         <Image src={aidaSobreMi} alt="Aida Oropeza" class="rounded-lg" />
     </div>
     </section>
