--- a/src/components/ActionFronts.astro
+++ b/src/components/ActionFronts.astro
@@ -2,7 +2,7 @@
 import { Icon } from 'astro-icon/components'
 ---
 
-<div class="justify-center md:flex-row px-10 py-20">
+<div class="justify-center py-5 md:flex-row px-10 md:py-20">
     <p class="text-purple">Mi Equipo Global</p>
     <h4 class="text-[32px] text-blue font-bold">
         Frentes de Acción
