--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,25 +1,25 @@
 ---
 import { Icon } from "astro-icon/components"
 ---
-<section class="flex flex-col md:flex-row bg-[#6A7CD8] min-h-screen" id="contacto">
+<section class="flex flex-col md:flex-row bg-[#6A7CD8] min-h-32" id="contacto">
     <div class="md:w-[50%] px-10 py-20">
        <h6 class="text-white font-bold text-[64px] ">Contacto</h6>
         <p class="text-white">Busco colaborar en espacios de co-creación donde las ideas fluyan y se transformen en algo significativo: medios, foros, podcasts, blogs, entrevistas o charlas entre profesionales.</p>
 
-        <a href="mailto:marketing@beyondtechnology.net" class="inline-flex items-center text-white text-[20px] mt-10 gap-4">
+        <a href="mailto:marketing@beyondtechnology.net" class="inline-flex items-center text-white text-[20px] mt-10 gap-4" aria-label="correo">
             <Icon
         name="contact/correo"
             class="text-2xl"
       />
             marketing@beyondtechnology.net</a>
-            <a href="https://www.linkedin.com/in/aida-oropeza-lopez/" target="_blank" class="inline-flex items-center text-white text-[20px] mt-10 gap-4">
+            <a href="https://www.linkedin.com/in/aida-oropeza-lopez/" target="_blank" class="inline-flex items-center text-white text-[20px] mt-10 gap-4" aria-label="linkedin">
             <Icon
         name="contact/linkedin"
             class="text-2xl"
       />
             Aida Oropeza López</a>
     </div>
-    <div class="flex-1 md:w-[50%] px-15 pt-10 flex items-stretch">
-<iframe aria-label='Contacto' frameborder="0" style="height:800px;width:99%;border:none;" src='https://forms.zohopublic.com/beyondtechnologyltd/form/AidaOropeza/formperma/dyEXg_LuECA4CxTqNQ6gsPUdivR9xKuJ10NtnXS39n0'></iframe>
+    <div class="flex-1 flex items-stretch md:w-[50%] px-5 pt-5 md:px-15 md:pt-10 ">
+<iframe aria-label='Contacto' frameborder="0" style="height:800px;width:99%;border:none;" src='https://forms.zohopublic.com/beyondtechnologyltd/form/AidaOropeza/formperma/dyEXg_LuECA4CxTqNQ6gsPUdivR9xKuJ10NtnXS39n0' title="Contact aida oropeza"></iframe>
     </div>
     </section>
