--- a/src/components/OurPurpose.astro
+++ b/src/components/OurPurpose.astro
@@ -3,7 +3,7 @@ import { Icon } from 'astro-icon/components'
 
 ---
 <section class="flex flex-col md:flex-row items-stretch">
-    <div class="flex-1 px-10 py-20 ">
+    <div class="flex-1 px-10 py-5 md:py-15 ">
         <p class="text-purple">Mi Equipo Global</p>
         <h3 class="text-[32px] text-blue font-bold">Nuestro propósito: </h3>
         <p class="text-[32px] text-purple font-bold">Generar Bienestar Y Trascendencia</p>
@@ -16,7 +16,7 @@ import { Icon } from 'astro-icon/components'
             </p>
         </div>
     </div>
-    <div class="flex-1 px-10 py-20 ">
+    <div class="flex-1 px-10 py-1 md:py-15 ">
         <p class="text-[16px] text-blue font-bold flex items-center gap-2 md:mt-40 sm: mt-5">
             <Icon name="icon-mission"></Icon>¿Cuál es nuestra misión?
         </p>
