fix: autoclose mobile menu

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -43,7 +43,7 @@ import { Icon } from "astro-icon/components";
     <!-- Mobile menu -->
 
 <!-- Mobile menu -->
-<div id="mobile-menu" class="md:hidden flex flex-col items-stretch gap-4 mt-5">
+<div id="mobile-menu" class="md:hidden hidden flex flex-col items-stretch gap-4 mt-5">
   <a href="#proposito" title="Mi proposito">Mi próposito</a>
   <a href="#miequipo" title="Mi Equipo Global">Mi Equipo Global</a>
   <a href="#casos-de-exito" title="Éxitos en acción">Éxitos en acción</a>
