--- a/src/components/OurPurpose.astro
+++ b/src/components/OurPurpose.astro
@@ -2,7 +2,7 @@
 import { Icon } from 'astro-icon/components'
 
 ---
-<section class="flex flex-col md:flex-row items-stretch">
+<section class="flex flex-col md:flex-row items-stretch" id="miequipo">
     <div class="flex-1 px-10 py-5 md:py-15 ">
         <p class="text-purple">Mi Equipo Global</p>
         <h3 class="text-[32px] text-blue font-bold">Nuestro propósito: </h3>
