--- a/src/components/SuccesStories.astro
+++ b/src/components/SuccesStories.astro
@@ -12,7 +12,7 @@ import { Icon } from "astro-icon/components";
 import OrienteMedio from "../assets/casos de éxito/Oriente Medio.webp";
 ---
 
-<section class="flex flex-col gap-6 px-10 py-10" id="casos de éxito">
+<section class="flex flex-col gap-6 px-10 py-10" id="casos-de-exito">
   <p class="text-purple">Éxitos en acción</p>
   <h6 class="text-blue text-[32px] font-bold">
     Creamos algo <br /> con impacto global
