--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -15,7 +15,7 @@ import { Icon } from "astro-icon/components";
       <div class="hidden md:flex items-center space-x-4 gap-8">
         <a href="#proposito" title="Mi proposito">Mi próposito</a>
         <a href="#miequipo" title="Mi proposito">Mi Equipo Global</a>
-        <a href="#casos de éxito" title="Mi proposito">Éxitos en acción</a>
+        <a href="#casos-de-exito" title="Mi proposito">Éxitos en acción</a>
 
          <a href="#contacto" class="text-white borde bg-[#6A7CD8] rounded-lg p-3">Agenda con Aida
   
