Feature: Add hover styles, fix: Changes copys, feature: add success stories links

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -8,7 +8,7 @@ import aidaSobreMi from "../assets/Aida Oropeza sobre mi.webp";
         <p class="text-purple">Mi propósito</p>
         <h2 class="text-[32px] text-blue font-bold">Te cuento un poco sobre mi</h1>
         <p class="pl-3 border-l-1 text-blue font-bold text-[16px] mt-20 tracking-wider">EXPERIENCIA ACTUAL</p>
-        <p class="pl-3 text-gray text-[16px] my-8">Con más de 10 años de experiencia, he liderado estrategias de marketing innovadoras para compañías globales de tecnología y actualmente me encuentro en Beyond Technology, fortaleciendo la marca en mercados internacionales y gestionando equipos multidisciplinarios.</p>
+        <p class="pl-3 text-gray text-[16px] my-8">Con más de 10 años de experiencia, he liderado estrategias de marketing innovadoras para compañías globales de tecnología y actualmente me encuentro en <a href="https://beyondtechnology.net/es/" class="font-bold underline text-[#6A7CD8] ">Beyond Technology</a> , fortaleciendo la marca en mercados internacionales y gestionando equipos multidisciplinarios.</p>
         <p class="pl-3 border-l-1 text-blue font-bold text-[16px] tracking-wider">ENFOQUE ESTRATÉGICO</p>
         <p class="pl-3 text-gray text-[16px] my-8">Combino creatividad, datos y tecnología para optimizar la experiencia del cliente y escalar estrategias en el entorno IT-B2B. He trabajado en contextos multiculturales, alineando campañas con objetivos de negocio y potenciando la comunicación externa.</p>
         <p class="pl-3 border-l-1 text-blue font-bold text-[16px] tracking-wider">APORTES E INSIGHTS</p>
