--- a/src/components/ActionFronts.astro
+++ b/src/components/ActionFronts.astro
@@ -2,42 +2,35 @@
 import { Icon } from 'astro-icon/components'
 ---
 
-<div class="justify-center py-5 md:flex-row px-10 md:py-20">
-    <p class="text-purple">Mi Equipo Global</p>
+<div class="justify-center py-5 md:flex-row px-10 md:py-10">
+    <p class="text-purple">Mi Equipo Global en Beyond Technology </p>
     <h4 class="text-[32px] text-blue font-bold">
         Frentes de Acción
     </h4>
 </div>
-<section class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-5 gap-10 px-10 py-10">
-  <div class="bg-[#F7F7F7] px-10 pt-20 rounded-lg flex flex-col">
-    <Icon name="Automatizacion_Data_Center-Visibilidad 1" class="text-5xl" />
-    <div class="flex w-full gap-3 items-center">
-      <a href="https://beyondtechnology.net/es/soluciones-para-redes-opticas/" target="_blank" title="automatización de redes de centros de datos" class="text-gray text-[16px] font-bold my-8">Soluciones para Redes Ópticas</a>
-      <a href="https://beyondtechnology.net/es/soluciones-para-redes-opticas/" target="_blank" title="Soluciones para redes opticas"><Icon name="Arrow purple" class="text-l" /></a>
-    </div>
-  </div>
-  <div class="bg-[#F7F7F7] px-10 pt-20 rounded-lg flex flex-col">
+<section class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-10 px-10 py-3">
+  <div class="bg-[#F7F7F7] px-10 pt-20 rounded-lg flex flex-col items-center">
     <Icon name="Virtualizacion_y_Servicios_de_Nube-Respaldo 1" class="text-5xl" />
     <div class="flex w-full gap-3 items-center">
       <a href="https://beyondtechnology.net/es/proteccion-y-seguridad-de-infraestructura-soluciones-en-ciberseguridad/" target="_blank" title="automatización de redes de centros de datos" class="text-gray text-[16px] font-bold my-8">Protección y seguridad de infraestructura</a>
       <a href="https://beyondtechnology.net/es/proteccion-y-seguridad-de-infraestructura-soluciones-en-ciberseguridad/" target="_blank" title="automatización de redes de centros de datos"><Icon name="Arrow purple" class="text-l" /></a>
     </div>
   </div>
-  <div class="bg-[#F7F7F7] px-10 pt-20 rounded-lg flex flex-col">
+  <div class="bg-[#F7F7F7] px-10 pt-20 rounded-lg flex flex-col items-center">
     <Icon name="AI_Driven_Enterprise-Automatizacion 1" class="text-5xl" />
     <div class="flex w-full gap-3 items-center">
-      <a href="https://beyondtechnology.net/es/automatizacion-de-redes-de-centro-de-datos/" target="_blank" title="automatización de redes de centros de datos" class="text-gray text-[16px] font-bold my-8">Automatización de redes de centros de datos</a>
-      <a href="https://beyondtechnology.net/es/automatizacion-de-redes-de-centro-de-datos/" target="_blank" title="automatización de redes de centros de datos"><Icon name="Arrow purple" class="text-l" /></a>
+      <a href="https://www.farmguardian.mx/es/" target="_blank" title="Beyond Farm Guardian" class="text-gray text-[16px] font-bold my-8">Beyond Farm Guardian</a>
+      <a href="https://www.farmguardian.mx/es/" target="_blank" title="automatización de redes de centros de datos"><Icon name="Arrow purple" class="text-l" /></a>
     </div>
   </div>
-  <div class="bg-[#F7F7F7] px-10 pt-20 rounded-lg flex flex-col">
-    <Icon name="AI_Driven_Enterprise-Automatizacion 1" class="text-5xl" />
+  <div class="bg-[#F7F7F7] px-10 pt-20 rounded-lg flex flex-col items-center">
+    <Icon name="Automatizacion_Data_Center-Visibilidad 1" class="text-5xl" />
     <div class="flex w-full gap-3 items-center">
-      <a href="https://beyondtechnology.net/es/virtualizacion-y-servicios-de-nube/" target="_blank" title="automatización de redes de centros de datos" class="text-gray text-[16px] font-bold my-8">Virtualización y Servicios de Nube</a>
-      <a href="https://beyondtechnology.net/es/virtualizacion-y-servicios-de-nube/" target="_blank" title="automatización de redes de centros de datos"><Icon name="Arrow purple" class="text-l" /></a>
+      <a href="https://beyondtechnology.net/es/beyond-smart-wifi-esp/" target="_blank" title="automatización de redes de centros de datos" class="text-gray text-[16px] font-bold my-8">Beyond Smart Wifi</a>
+      <a href="https://beyondtechnology.net/es/beyond-smart-wifi-esp/" target="_blank" title="automatización de redes de centros de datos"><Icon name="Arrow purple" class="text-l" /></a>
     </div>
   </div>
-  <div class="bg-[#F7F7F7] px-10 pt-20 rounded-lg flex flex-col">
+  <div class="bg-[#F7F7F7] px-10 pt-20 rounded-lg flex flex-col items-center">
     <Icon name="AI_Driven_Enterprise-Automatizacion 1" class="text-5xl" />
     <div class="flex w-full gap-3 items-center">
       <a href="https://beyondtechnology.net/es/wifi-impulsado-por-ia/" target="_blank" title="automatización de redes de centros de datos" class="text-gray text-[16px] font-bold my-8">Wifi Impulsado Por IA</a>
