--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,12 +13,10 @@ import { Icon } from "astro-icon/components";
       </div>
 
       <div class="hidden md:flex items-center space-x-4 gap-8">
-        <a href="#proposito" title="Mi proposito">Mi próposito</a>
-        <a href="#miequipo" title="Mi proposito">Mi Equipo Global</a>
-        <a href="#casos-de-exito" title="Mi proposito">Éxitos en acción</a>
-
-         <a href="#contacto" class="text-white borde bg-[#6A7CD8] rounded-lg p-3">Agenda con Aida
-  
+        <a href="#proposito" title="Mi proposito" class="hover:text-[#6A7CD8]">Mi próposito</a>
+        <a href="#miequipo" title="Mi equipo" class="hover:text-[#6A7CD8]">Mi Equipo Global en Beyond Technology </a>
+        <a href="#casos-de-exito" title="casos de éxito" class="hover:text-[#6A7CD8]">Éxitos en acción</a>
+         <a href="#contacto" class="text-white borde bg-[#6A7CD8] rounded-lg p-3" title="Contacto">Agenda con Aida  
            </a>
       </div>
 
@@ -45,7 +43,7 @@ import { Icon } from "astro-icon/components";
 <!-- Mobile menu -->
 <div id="mobile-menu" class="md:hidden hidden flex flex-col items-stretch gap-4 mt-5">
   <a href="#proposito" title="Mi proposito">Mi próposito</a>
-  <a href="#miequipo" title="Mi Equipo Global">Mi Equipo Global</a>
+  <a href="#miequipo" title="Mi Equipo Global en Beyond Technology ">Mi Equipo Global en Beyond Technology </a>
   <a href="#casos-de-exito" title="Éxitos en acción">Éxitos en acción</a>
   <a href="#contacto" class="text-white bg-[#6A7CD8] rounded-lg p-3 text-center">Agenda con Aida</a>
 </div>
