--- a/src/components/SuccesStories.astro
+++ b/src/components/SuccesStories.astro
@@ -187,9 +187,13 @@ import OrienteMedio from "../assets/casos de éxito/Oriente Medio.webp";
             /> 
 
             <ul class="text-gray text-[16px] list-disc pl-7 pt-7">
-              <li>
-                Proveedor exclusivo de soluciones de red impulsadas con IA.
+             <li><b>Alianza estratégica:</b> Beyond Technology se convierte en proveedor exclusivo de infraestructura de red y soluciones de IA de Juniper Networks para Jazz en Pakistán. 
+
+             
               </li>
+             <li><b> Transformación digital:</b> Implementación de Mist AI y Marvis para optimizar la red de Jazz, mejorando eficiencia y experiencia del usuario. 
+            </li>
+             <li><b>Impacto significativo: </b>Más de 75 millones de suscriptores de Jazz se benefician de una red más segura, escalable y gestionada desde la nube. </li>
               
             
             </ul>
