--- a/src/components/Volunteering.astro
+++ b/src/components/Volunteering.astro
@@ -10,7 +10,7 @@ import Voluntariado7 from "../assets/Voluntariado/Voluntariado-Aida_Oropeza-007.
 ---
 <section class="flex flex-col md:flex-row bg-[#F7F7F7]">
     <div class="md:w-[50%] px-10 py-20">
-        <p class="text-purple">Mi Equipo Global</p>
+        <p class="text-purple">Mi Equipo Global en Beyond Technology </p>
         <h2 class="text-[32px] text-blue font-bold">Lo que logramos juntos para la comunidad</h1>
 
      <p class="text-gray pt-5">Hasta hoy hemos logrado beneficiar a 5057 personas: </p>
