--- a/src/components/WeCreateValue.astro
+++ b/src/components/WeCreateValue.astro
@@ -1,28 +1,57 @@
 ---
-import { Icon } from 'astro-icon/components'
+import { Icon } from "astro-icon/components";
 ---
 
 <section class="flex flex-col items-center justify-center gap-2 px-10 py-10">
-    <p class="text-purple ">Mi Equipo Global</p>
-    <h5 class="text-blue text-[32px] text-center font-bold">¿Para quiénes creamos valor?</h5>
-    <div class="grid grid-cols-2 md:grid-cols-5 gap-15 mt-20">
-        <div class="flex flex-col items-center">
-            <Icon name="Telecomunicaciones" class="text-5xl icon-hover" />
-            <p class="text-gray text-[16px] font-bold pt-5 ">Telecomunicaciones</p>
-        </div>
-       <div class="flex flex-col items-center">
-            <Icon name="Retail" class="text-5xl icon-hover" />
-            <p class="text-gray text-[16px] font-bold pt-5 text-center">Retail</p>
-        </div><div class="flex flex-col items-center">
-            <Icon name="Hoteleria" class="text-5xl icon-hover" />
-            <p class="text-gray text-[16px] font-bold pt-5 text-center">Hotelería, servicios y entretenimiento</p>
-        </div><div class="flex flex-col items-center">
-            <Icon name="Manufactura" class="text-5xl icon-hover" />
-            <p class="text-gray text-[16px] font-bold pt-5 text-center">Manufactura</p>
-        </div>
-        <div class="flex flex-col items-center">
-            <Icon name="Servicios financieros" class="text-5xl icon-hover" />
-            <p class="text-gray text-[16px] font-bold pt-5 text-centerhv">Servicios financieros</p>
-        </div>
+  <p class="text-purple">Mi Equipo Global en Beyond Technology</p>
+  <h5 class="text-blue text-[32px] text-center font-bold">
+    ¿Para quiénes creamos valor?
+  </h5>
+  <div class="grid grid-cols-2 md:grid-cols-5 gap-15 mt-10">
+    <div class="flex flex-col items-center">
+      <a
+        href="https://beyondtechnology.net/es/casos-de-exito/beyond-technology-se-convierte-en-el-unico-proveedor-de-infraestructura-de-red-y-soluciones-de-inteligencia-artificial-de-juniper-networks-para-jazz-en-pakistan/"
+        target="_blank"
+      >
+        <Icon
+          name="Telecomunicaciones"
+          class="text-5xl icon-hover items-center m-auto"
+        />
+        <p class="text-gray text-[16px] font-bold pt-5">Telecomunicaciones</p>
+      </a>
     </div>
+    <div class="flex flex-col items-center">
+      <a
+        href="https://beyondtechnology.net/es/casos-de-exito/conectando-a-una-fuerza-de-ventas-desde-cualquier-parte-del-mundo/"
+        target="_blank"
+      >
+        <Icon name="Retail" class="text-5xl icon-hover m-auto" />
+        <p class="text-gray text-[16px] font-bold pt-5 text-center">Retail</p>
+      </a>
+    </div><div class="flex flex-col items-center">
+        <a href="https://beyondtechnology.net/es/casos-de-exito/agilizando-el-servicio-de-rentade-automoviles-a-traves-de-lamovilidad/" target="_blank">
+            <Icon name="Hoteleria" class="text-5xl icon-hover m-auto" />
+            <p class="text-gray text-[16px] font-bold pt-5 text-center">
+              Hotelería, servicios y entretenimiento
+            </p>
+        </a>
+     
+    </div><div class="flex flex-col items-center">
+        <a href="https://beyondtechnology.net/es/casos-de-exito/como-un-grupo-empresarial-modernizo-su-infraestructura-de-red-para-impulsar-la-conectividad-en-sus-plantas-y-marcas-en-mexico/" target="_blank">
+            <Icon name="Manufactura" class="text-5xl icon-hover m-auto" />
+            <p class="text-gray text-[16px] font-bold pt-5 text-center m-auto">
+              Manufactura
+            </p>
+        </a>
+      
+    </div>
+    <div class="flex flex-col items-center">
+        <a href="https://beyondtechnology.net/es/casos-de-exito/innovacion-en-redes-como-una-empresa-fintech-mejora-seguridad-con-ia/" target="_blank">
+            <Icon name="Servicios financieros" class="text-5xl icon-hover m-auto" />
+            <p class="text-gray text-[16px] font-bold pt-5 text-centerhv">
+              Servicios financieros</a>
+   
+      </p>
+    </div>
+  </div>
 </section>
