--- a/src/components/ContactsAroundTheWorld.astro
+++ b/src/components/ContactsAroundTheWorld.astro
@@ -5,40 +5,9 @@ import Mapa from "../assets/Mapa-Conectados_por_el_mundo.webp";
 
 ---
 
-<!-- <section class="flex flex-col items-center justify-center gap-2 px-10 py-10">
-    <p class="text-purple ">Mi Equipo Global</p>
-    <h6 class="text-blue text-[32px] text-center font-bold">Aliados Globales</h6>
-    <div class="grid grid-cols-2 md:grid-cols-6 gap-10 mt-20">
-        <div class="flex flex-row items-center justify-center gap-4">
-            <Icon name="Flags/Mexico (MX)" class="text-2xl icon-hover" />
-            <p class="text-gray text-[16px]">México</p>
-        </div>
-         <div class="flex flex-row items-center justify-center gap-4">
-            <Icon name="Flags/United States of America (US)" class="text-2xl icon-hover" />
-            <p class="text-gray text-[16px]">Estados Unidos</p>
-        </div>
-          <div class="flex flex-row items-center justify-center gap-4">
-            <Icon name="Flags/Colombia (CO)" class="text-2xl icon-hover" />
-            <p class="text-gray text-[16px]">Colombia</p>
-        </div>
-        <div class="flex flex-row items-center justify-center gap-4">
-            <Icon name="Flags/United Arab Emirates (AE)" class="text-2xl icon-hover" />
-            <p class="text-gray text-[16px]">Emiratos Árabes Unidos</p>
-        </div>
-        <div class="flex flex-row items-center justify-center gap-4">
-            <Icon name="Flags/Pakistan (PK)" class="text-2xl icon-hover" />
-            <p class="text-gray text-[16px]">Pakistán</p>
-        </div>
-        <div class="flex flex-row items-center justify-center gap-4">
-            <Icon name="Flags/Spain (ES)" class="text-2xl icon-hover" />
-            <p class="text-gray text-[16px]">España</p>
-        </div>
-        
-    </div>
-</section> -->
 
-<section class="flex flex-col gap-2 px-10 py-10">
-    <p class="text-purple ">Mi Equipo Global</p>
+<section class="flex flex-col gap-2 px-10 pt-10">
+    <p class="text-purple text-center">Mi Equipo Global en Beyond Technology </p>
     <h6 class="text-blue text-[32px] text-center font-bold">Aliados Globales</h6>
     <div class="grid grid-cols-2 md:grid-cols-6 gap-10 mt-20">
         <div class="flex flex-row justify-start items-center md:justify-center gap-4">
@@ -68,18 +37,8 @@ import Mapa from "../assets/Mapa-Conectados_por_el_mundo.webp";
         
     </div>
 </section>
-
-
-
-
-
-
-
-
-
-
-<Image src={Mapa} alt="Aida Oropeza" class="rounded-lg" />
-<div class="grid grid-cols-2 md:grid-cols-4 gap-10 mt-20 bg-[#6A7CD8] py-20 px-15">
+<Image src={Mapa} alt="Aida Oropeza" class="hiddem md:flex rounded-lg" />
+<div class="grid grid-cols-2 md:grid-cols-4 gap-10 mt-0 bg-[#6A7CD8] py-20 px-15">
         <div class="flex flex-col gap-5 ">
             <p class="text-white text-[32px]">+ 80 países</p>
             <p class="text-white text-[16px] ">Servicio al Cliente 24/7 <br> los 365 días del año</p>
