--- a/src/components/OurPurpose.astro
+++ b/src/components/OurPurpose.astro
@@ -2,11 +2,11 @@
 import { Icon } from 'astro-icon/components'
 
 ---
-<section class="flex flex-col md:flex-row items-stretch" id="miequipo">
-    <div class="flex-1 px-10 py-5 md:py-15 ">
-        <p class="text-purple">Mi Equipo Global</p>
+<section class="flex flex-col md:flex-row" id="miequipo">
+    <div class="flex-1 px-10 py-5 md:py-8 ">
+        <p class="text-purple">Mi Equipo Global en Beyond Technology </p>
         <h3 class="text-[32px] text-blue font-bold">Nuestro propósito: </h3>
-        <p class="text-[32px] text-purple font-bold">Generar Bienestar Y Trascendencia</p>
+        <p class="text-[32px] text-purple font-bold">Generar bienestar y trascendencia</p>
         <div class="flex flex-col mt-10">
             <p class="text-[16px] text-blue font-bold flex items-center gap-2">
                 <Icon name="icon-mission"></Icon>¿Cuál es nuestra misión?
@@ -16,12 +16,12 @@ import { Icon } from 'astro-icon/components'
             </p>
         </div>
     </div>
-    <div class="flex-1 px-10 py-1 md:py-15 ">
+    <div class="flex-1 px-10 py-1 md:py-8 ">
         <p class="text-[16px] text-blue font-bold flex items-center gap-2 md:mt-40 sm: mt-5">
-            <Icon name="icon-mission"></Icon>¿Cuál es nuestra misión?
+            <Icon name="icon-mission"></Icon>¿Cuál es nuestra visión?
         </p>
         <p class="text-gray text-[16px] my-8">
-            Ser una corporación global enfocada en entender los procesos <br> de negocio de nuestros clientes y transformarlos con tecnología.
+            Generar bienestar y trascendencia en el ecosistema compuesto por <br> clientes, empleados, socios estratégicos, accionistas y sociedad en general.
         </p>
     </div>
 </section>
