fix: full width, feature: add meta description, feauture: change copys

--- a/src/components/ActionFronts.astro
+++ b/src/components/ActionFronts.astro
@@ -19,21 +19,21 @@ import { Icon } from 'astro-icon/components'
   <div class="bg-[#F7F7F7] px-10 pt-20 rounded-lg flex flex-col items-center">
     <Icon name="AI_Driven_Enterprise-Automatizacion 1" class="text-5xl" />
     <div class="flex w-full gap-3 items-center">
-      <a href="https://www.farmguardian.mx/es/" target="_blank" title="Beyond Farm Guardian" class="text-gray text-[16px] font-bold my-8">Beyond Farm Guardian</a>
+      <a href="https://www.farmguardian.mx/es/" target="_blank" title="Beyond Farm Guardian" class="text-gray text-[16px] font-bold my-8">Beyond FarmGuardian</a>
       <a href="https://www.farmguardian.mx/es/" target="_blank" title="automatización de redes de centros de datos"><Icon name="Arrow purple" class="text-l" /></a>
     </div>
   </div>
   <div class="bg-[#F7F7F7] px-10 pt-20 rounded-lg flex flex-col items-center">
     <Icon name="Automatizacion_Data_Center-Visibilidad 1" class="text-5xl" />
     <div class="flex w-full gap-3 items-center">
-      <a href="https://beyondtechnology.net/es/beyond-smart-wifi-esp/" target="_blank" title="automatización de redes de centros de datos" class="text-gray text-[16px] font-bold my-8">Beyond Smart Wifi</a>
+      <a href="https://beyondtechnology.net/es/beyond-smart-wifi-esp/" target="_blank" title="automatización de redes de centros de datos" class="text-gray text-[16px] font-bold my-8">Beyond Smart WiFi</a>
       <a href="https://beyondtechnology.net/es/beyond-smart-wifi-esp/" target="_blank" title="automatización de redes de centros de datos"><Icon name="Arrow purple" class="text-l" /></a>
     </div>
   </div>
   <div class="bg-[#F7F7F7] px-10 pt-20 rounded-lg flex flex-col items-center">
     <Icon name="AI_Driven_Enterprise-Automatizacion 1" class="text-5xl" />
     <div class="flex w-full gap-3 items-center">
-      <a href="https://beyondtechnology.net/es/wifi-impulsado-por-ia/" target="_blank" title="automatización de redes de centros de datos" class="text-gray text-[16px] font-bold my-8">Wifi Impulsado Por IA</a>
+      <a href="https://beyondtechnology.net/es/wifi-impulsado-por-ia/" target="_blank" title="automatización de redes de centros de datos" class="text-gray text-[16px] font-bold my-8">WiFi Impulsado Por IA</a>
       <a href="https://beyondtechnology.net/es/wifi-impulsado-por-ia/" target="_blank" title="automatización de redes de centros de datos"><Icon name="Arrow purple" class="text-l" /></a>
     </div>
   </div>
