--- a/src/components/ContactsAroundTheWorld.astro
+++ b/src/components/ContactsAroundTheWorld.astro
@@ -8,7 +8,7 @@ import Mapa from "../assets/Mapa-Conectados_por_el_mundo.webp";
 
 <section class="flex flex-col gap-2 px-10 pt-10">
     <p class="text-purple text-center">Mi Equipo Global en Beyond Technology </p>
-    <h6 class="text-blue text-[32px] text-center font-bold">Aliados Globales</h6>
+    <h6 class="text-blue text-[32px] text-center font-bold">Conectados por el mundo</h6>
     <div class="grid grid-cols-2 md:grid-cols-6 gap-10 mt-20">
         <div class="flex flex-row justify-start items-center md:justify-center gap-4">
             <Icon name="Flags/Mexico (MX)" class="text-2xl icon-hover" />
@@ -37,8 +37,8 @@ import Mapa from "../assets/Mapa-Conectados_por_el_mundo.webp";
         
     </div>
 </section>
-<Image src={Mapa} alt="Aida Oropeza" class="hiddem md:flex rounded-lg" />
-<div class="grid grid-cols-2 md:grid-cols-4 gap-10 mt-0 bg-[#6A7CD8] py-20 px-15">
+<Image src={Mapa} alt="Aida Oropeza" class="hidden md:flex rounded-lg" />
+<div class="grid grid-cols-2 md:grid-cols-4 gap-10 mt-4 bg-[#6A7CD8] py-20 px-15">
         <div class="flex flex-col gap-5 ">
             <p class="text-white text-[32px]">+ 80 países</p>
             <p class="text-white text-[16px] ">Servicio al Cliente 24/7 <br> los 365 días del año</p>
