--- a/src/components/GlobalPartners.astro
+++ b/src/components/GlobalPartners.astro
@@ -8,7 +8,7 @@ import DatacultrLogo from "../assets/Datacultr-Logo.webp";
 
 <section class="flex flex-col items-center justify-center gap-2 px-10 py-10">
     <p class="text-purple">Mi Equipo Global en Beyond Technology </p>
-    <h6 class="text-blue text-[32px] text-center font-bold">Conectados por el mundo</h6>
+    <h6 class="text-blue text-[32px] text-center font-bold">Aliados Globales</h6>
     <div class="grid grid-cols-2 md:grid-cols-5 md:gap-20 mt-20 items-center justify-center sm: gap-15">
         <div class="flex items-center justify-center">
             <Icon name="Partners/Logo-Juniper-RGB 1" class="text-3xl" />
