--- a/src/components/HeroBanner.astro
+++ b/src/components/HeroBanner.astro
@@ -17,7 +17,7 @@ import aidaOropeza from "../assets/Aida_oropeza.webp";
         <p class="text-purple text-[12px]">🌐 Tecnología y Negocios con Impacto</p>
       </div>
       <div class="flex flex-col items-center justify-center bg-purple-5 rounded-2xl px-5 py-3">
-        <p class="text-purple text-[12px]">💻 🧠 UX potenciado con IA</p>
+        <p class="text-purple text-[12px]">💻 🧠 CX potenciado con IA</p>
       </div>
     </section>
     <button class="text-white borde bg-[#6A7CD8] rounded-lg px-6 py-2 my-8">
