--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,12 +11,13 @@ import Header from '../components/Header.astro'
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
+		<meta name"description" content="Especialista en soluciones digitales que potencian la seguridad en entornos digitales y mejoran la experiencia de usuario a través de la IA. Servicios en ciberseguridad, Wifi inteligente, KYC y más. Tecnología con visión Beyond Technology.">
 		<title>Aida Oropeza</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 	</head>
-	<body>
+	<body class="w-fit"> 
 		<Header />
 		<slot />
 	</body>
