fix: change copys to PascalCase, feature: add favicon

--- a/src/components/ActionFronts.astro
+++ b/src/components/ActionFronts.astro
@@ -12,7 +12,7 @@ import { Icon } from 'astro-icon/components'
   <div class="bg-[#F7F7F7] px-10 pt-20 rounded-lg flex flex-col items-center">
     <Icon name="Virtualizacion_y_Servicios_de_Nube-Respaldo 1" class="text-5xl" />
     <div class="flex w-full gap-3 items-center">
-      <a href="https://beyondtechnology.net/es/proteccion-y-seguridad-de-infraestructura-soluciones-en-ciberseguridad/" target="_blank" title="automatización de redes de centros de datos" class="text-gray text-[16px] font-bold my-8">Protección y seguridad de infraestructura</a>
+      <a href="https://beyondtechnology.net/es/proteccion-y-seguridad-de-infraestructura-soluciones-en-ciberseguridad/" target="_blank" title="automatización de redes de centros de datos" class="text-gray text-[16px] font-bold my-8">Protección y Seguridad de Infraestructura</a>
       <a href="https://beyondtechnology.net/es/proteccion-y-seguridad-de-infraestructura-soluciones-en-ciberseguridad/" target="_blank" title="automatización de redes de centros de datos"><Icon name="Arrow purple" class="text-l" /></a>
     </div>
   </div>
