--- a/src/components/ContactsAroundTheWorld.astro
+++ b/src/components/ContactsAroundTheWorld.astro
@@ -45,11 +45,11 @@ import Mapa from "../assets/Mapa-Conectados_por_el_mundo.webp";
         </div>
         <div class="flex flex-col gap-5 ">
             <p class="text-white text-[32px]">+ 47</p>
-            <p class="text-white text-[16px] ">Especializaciones de certificaciones</p>
+            <p class="text-white text-[16px] ">Especializaciones de Certificaciones</p>
         </div>
          <div class="flex flex-col gap-5 ">
             <p class="text-white text-[32px]">7</p>
-            <p class="text-white text-[16px] ">Oficinas regionales</p>
+            <p class="text-white text-[16px] ">Oficinas Regionales</p>
         </div>
          <div class="flex flex-col gap-5 ">
             <p class="text-white text-[32px]">ISO 9001:2015</p>
