--- a/src/components/WeCreateValue.astro
+++ b/src/components/WeCreateValue.astro
@@ -32,7 +32,7 @@ import { Icon } from "astro-icon/components";
         <a href="https://beyondtechnology.net/es/casos-de-exito/agilizando-el-servicio-de-rentade-automoviles-a-traves-de-lamovilidad/" target="_blank">
             <Icon name="Hoteleria" class="text-5xl icon-hover m-auto" />
             <p class="text-gray text-[16px] font-bold pt-5 text-center">
-              Hotelería, servicios y entretenimiento
+              Hotelería, Servicios y Entretenimiento
             </p>
         </a>
      
@@ -49,7 +49,7 @@ import { Icon } from "astro-icon/components";
         <a href="https://beyondtechnology.net/es/casos-de-exito/innovacion-en-redes-como-una-empresa-fintech-mejora-seguridad-con-ia/" target="_blank">
             <Icon name="Servicios financieros" class="text-5xl icon-hover m-auto" />
             <p class="text-gray text-[16px] font-bold pt-5 text-centerhv">
-              Servicios financieros</a>
+              Servicios Financieros</a>
    
       </p>
     </div>
