feature: add press section

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,10 +12,12 @@ import { Icon } from "astro-icon/components";
         </a>
       </div>
 
-      <div class="hidden md:flex items-center space-x-4 gap-8">
+      <div class="hidden md:flex items-center space-x-4 gap-6">
         <a href="#proposito" title="Mi proposito" class="hover:text-[#6A7CD8]">Mi Próposito</a>
         <a href="#miequipo" title="Mi equipo" class="hover:text-[#6A7CD8]">Mi Equipo Global en Beyond Technology </a>
         <a href="#casos-de-exito" title="casos de éxito" class="hover:text-[#6A7CD8]">Éxitos en Acción</a>
+                <a href="#Press" title="casos de éxito" class="hover:text-[#6A7CD8]">Presencia en Medios</a>
+
          <a href="#contacto" class="text-white borde bg-[#6A7CD8] rounded-lg p-3" title="Contacto">Agenda con Aida  
            </a>
       </div>
@@ -45,6 +47,8 @@ import { Icon } from "astro-icon/components";
   <a href="#proposito" title="Mi proposito">Mi Próposito</a>
   <a href="#miequipo" title="Mi Equipo Global en Beyond Technology ">Mi Equipo Global en Beyond Technology </a>
   <a href="#casos-de-exito" title="Éxitos en acción">Éxitos en Acción</a>
+                  <a href="#Press" title="casos de éxito" class="hover:text-[#6A7CD8]">Presencia en Medios</a>
+
   <a href="#contacto" class="text-white bg-[#6A7CD8] rounded-lg p-3 text-center">Agenda con Aida</a>
 </div>
 
