--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,7 @@ import Volunteering from '../components/Volunteering.astro';
 import Layout from '../layouts/Layout.astro';
 import SuccesStories from '../components/SuccesStories.astro';
 import Contact from '../components/Contact.astro';
+import Press from '../components/Press.astro';
 ---
 <Layout>
 	<HeroBanner />
@@ -22,5 +23,7 @@ import Contact from '../components/Contact.astro';
 	<GlobalPartners />
 	<Volunteering />
 	<SuccesStories />
+	<Press/>
 	<Contact/>
+	
 </Layout>
